<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rewarded Todo</string>
    <string name="menu_todo">Todo</string>
    <string name="menu_reward">Reward</string>
</resources>
