...
            onCheckedChange = {
                onTodoDone.invoke(todo)
                isDone = it
            },
            modifier = Modifier
                .padding(end = 16.dp)
                .semantics { contentDescription = "todo_checkbox" },
        )
        Column(
            modifier = Modifier.weight(1f),
        ) {
            Text(
                text = todo.name,
...
