<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_title">Setting</string>
    <string name="account_section">Account</string>

    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="logout_description">Logging out removes the Todoist token from this device. To revoke access on Todoist, visit Settings &#8250; Integrations in Todoist.</string>
    <string name="logout_confirmation_title">Log out of Todoist?</string>
    <string name="logout_confirmation_message">This app needs a Todoist connection, so you will have to connect again before you can use it.</string>

    <string name="error_logout_failed">Failed to log out</string>
</resources>
