<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="todo_repeating">Repeating</string>
    <string name="todo_reward">Reward</string>
    <string name="multiplication">x</string>

    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>

    <string name="error_message">Error occurred</string>
</resources>
